--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
   "dependencies": {
     "@godmodelabs/busboy": "^0.3.1",
     "bunyan": "^1.5.1",
-    "chokidar": "^2.0.4",
+    "chokidar": "^2.1.0",
     "content-type": "^1.0.2",
     "flora-cluster": "^2.0.0-alpha.1",
     "flora-errors": "^2.0.0-alpha.1",
@@ -57,14 +57,15 @@
     "@types/chai": "^4.1.6",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
-    "eslint": "^5.9.0",
+    "eslint": "^5.13.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.14.0",
     "jsdoc": "^3.5.3",
     "mocha": "^5.2.0",
-    "mock-fs": "^4.7.0",
+    "mock-fs": "^4.8.0",
     "pre-commit": "^1.2.2",
-    "sinon": "^4.3.0",
-    "sinon-chai": "^2.12.0"
+    "prettier": "^1.15.2",
+    "sinon": "^7.2.3",
+    "sinon-chai": "^3.3.0"
   }
 }
